# project_babui

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: babui_browser.py
src/project_babui/: __init__.py  main.py
src/project_babui/utils/: debug.py  mimicing.py  scraping.py  state.py  telegram.py
