[project]
name = "project-babui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "miautawn", email = "miautawn@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.28.1",
    "humanization-playwright>=0.1.2",
    "ipykernel>=7.2.0",
    "playwright>=1.59.0",
    "pre-commit>=4.6.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
]

[project.scripts]
start = "project_babui.main:start"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
